Fixing the Review Edit Page

--- a/HomeKnits/appsettings.json
+++ b/HomeKnits/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-HomeKnits-7caddcad-c815-442d-b971-bf872e852dd4;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "HomeKnitsContext": "Server=(localdb)\\mssqllocaldb;Database=HomeKnits.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "HomeKnitsContext": "Data Source=tcp:homeknitsdbserver.database.windows.net,1433;Initial Catalog=HomeKnits_db;User Id=homeknitsadmin@homeknitsdbserver;Password=i2yfzZBr9MU"
   },
   "Logging": {
     "LogLevel": {
